(chores) camel-catalog: use an unmodifiable List by default